# internal/delivery/http/v1/auth.go
@@ -15,12 +15,9 @@ func (h *Handler) InitAuthRouter(v1 *gin.RouterGroup) {
 // CreateToken
 // @Summary Create
 // @Tags auth
-// @Description create auth token
 // @ID create-auth-token
-// @Produce json
-// @Success 200 {string} string "token"
-// @Failure 400,404 {object} response
-// @Failure default {object} response
+// @Success 200 {object} responseToken
+// @Failure 400 {object} response
 // @Router /api/v1/auth/create [get]
 func (h *Handler) CreateToken(c *gin.Context) {
 	token, err := h.services.Auth.CreateToken()
@@ -29,7 +26,5 @@ func (h *Handler) CreateToken(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"token": token,
-	})
+	c.JSON(http.StatusOK, responseToken{Token: token})
 }
