# internal/delivery/http/v1/response.go
@@ -9,6 +9,10 @@ type response struct {
 	Message string `json:"message"`
 }
 
+type responseToken struct {
+	Token string `json:"token"`
+}
+
 func newResponse(c *gin.Context, statusCode int, err error) {
 	logrus.Error(err)
 	c.AbortWithStatusJSON(statusCode, response{err.Error()})
